# learncmake

Project1_SimpleCMake/: CMakeLists.txt  main.cc
Project2_LibInCmake/: CMakeLists.txt  main.cc
Project3_LibFoldersInCmake/: CMakeLists.txt
Project3_LibFoldersInCmake/src/: CMakeLists.txt
Project3_LibFoldersInCmake/src/mylib/: CMakeLists.txt
Project4_VarsInCmake/: CMakeLists.txt
Project4_VarsInCmake/src/mylib/: CMakeLists.txt
Project5_ConfigVersAuto/: CMakeLists.txt  README.txt
Project5_ConfigVersAuto/app/: CMakeLists.txt  main.cc
Project5_ConfigVersAuto/configured/: CMakeLists.txt
Project5_ConfigVersAuto/src/mylib/: CMakeLists.txt  my_lib.cc  my_lib.h
